[MAIL] Re-enable packaging fonts

--- a/mail/installer/package-manifest.in
+++ b/mail/installer/package-manifest.in
@@ -52,7 +52,7 @@
 @RESPATH@/dictionaries/*
 #@RESPATH@/searchplugins/*
 #ifdef MOZ_BUNDLED_FONTS
-#@RESPATH@/fonts/*
+@RESPATH@/fonts/*
 #endif
 @RESPATH@/hyphenation/*
 #ifdef HAVE_MAKENSISU
