--- a/mail/configure.in
+++ b/mail/configure.in
@@ -4,21 +4,40 @@ dnl This Source Code Form is subject to the terms of the Mozilla Public
 dnl License, v. 2.0. If a copy of the MPL was not distributed with this
 dnl file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+dnl =========================================================
 dnl Things we need to carry from confvars.sh
-AC_DEFINE(MOZ_THUNDERBIRD)
-AC_SUBST(MOZ_THUNDERBIRD)
-AC_DEFINE(BINOC_INTERLINK)
-AC_SUBST(BINOC_INTERLINK)
-AC_SUBST(MOZ_COMPOSER)
-AC_SUBST(THUNDERBIRD_VERSION)
-AC_DEFINE(MOZ_SEPARATE_MANIFEST_FOR_THEME_OVERRIDES)
-AC_SUBST(MOZ_BUNDLED_FONTS)
+dnl =========================================================
 
-dnl Optional parts of the build.
+dnl Application defines
+AC_SUBST(MOZ_THUNDERBIRD)
+AC_DEFINE(MOZ_THUNDERBIRD)
+
+AC_SUBST(BINOC_INTERLINK)
+AC_DEFINE(BINOC_INTERLINK)
+
+AC_SUBST(MOZ_BUNDLED_FONTS)
+AC_DEFINE(MOZ_SEPARATE_MANIFEST_FOR_THEME_OVERRIDES)
+
+AC_SUBST(MOZ_COMPOSER)
+
+AC_SUBST(MOZ_LDAP_XPCOM)
+AC_DEFINE(MOZ_LDAP_XPCOM)
+
+SEAMONKEY_VERSION=2.49
+AC_SUBST(SEAMONKEY_VERSION)
+AC_SUBST(THUNDERBIRD_VERSION)
+
+dnl =========================================================
+dnl = Mork
+dnl =========================================================
 AC_SUBST(MOZ_MORK)
 if test "$MOZ_MORK"; then
   AC_DEFINE(MOZ_MORK)
 fi
+
+dnl =========================================================
+dnl = movemail
+dnl =========================================================
 if test "$OS_ARCH" != "WINNT"; then
   MOZ_MOVEMAIL=1
   HAVE_MOVEMAIL=1
@@ -26,9 +45,6 @@ if test "$OS_ARCH" != "WINNT"; then
 fi
 AC_SUBST(MOZ_MOVEMAIL)
 
-dnl Get other versions (for the calendar extension)
-SEAMONKEY_VERSION=2.49
-AC_SUBST(SEAMONKEY_VERSION)
 
 dnl =========================================================
 dnl = Lightning extension
@@ -39,22 +55,15 @@ MOZ_ARG_ENABLE_BOOL(calendar,
     MOZ_CALENDAR= )
 AC_SUBST(MOZ_CALENDAR)
 
+dnl =========================================================
+dnl = Don't fold *comps into libXUL
+dnl =========================================================
 MOZ_ARG_ENABLE_BOOL(incomplete-external-linkage,
-[  --enable-incomplete-external-linkage Changes some comm-central code to be built with external linkage. Developer only option, incomplete broken builds will result - There are already existing bugs for this. ],
+[  --enable-incomplete-external-linkage Don't fold *comps into libXUL which is currently badly busted so don't even bother with it ],
     MOZ_INCOMPLETE_EXTERNAL_LINKAGE=1,
     MOZ_INCOMPLETE_EXTERNAL_LINKAGE= )
 
 AC_SUBST(MOZ_INCOMPLETE_EXTERNAL_LINKAGE)
-
-dnl =========================================================
-dnl = LDAP
-dnl =========================================================
-MOZ_ARG_DISABLE_BOOL(ldap,
-[  --disable-ldap          Disable LDAP support],
-    MOZ_LDAP_XPCOM=,
-    MOZ_LDAP_XPCOM=1)
-
-AC_SUBST(MOZ_LDAP_XPCOM)
 
 dnl =========================================================
 dnl = MAPI support (Windows only)
