[MAIL] Get rid of DIST_SUBDIR from classic theme

--- a/mail/installer/package-manifest.in
+++ b/mail/installer/package-manifest.in
@@ -194,7 +194,7 @@
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 @RESPATH@/chrome/classic@JAREXT@
-;@RESPATH@/chrome/classic.manifest
+@RESPATH@/chrome/classic.manifest
 
 ; DevTools
 #ifdef MOZ_DEVTOOLS
