--- a/mail/installer/windows/nsis/defines.nsi.in
+++ b/mail/installer/windows/nsis/defines.nsi.in
@@ -44,16 +44,11 @@
 #ifdef HAVE_64BIT_BUILD
 !define HAVE_64BIT_BUILD
 !define ARCH "x64"
-!define MinSupportedVer "Microsoft Windows Vista x64"
+!define MinSupportedVer "Microsoft Windows 7 x64"
+!define MinSupportedCPU "AVX"
 #else
 !define ARCH "x86"
-!define MinSupportedVer "Microsoft Windows XP SP2"
-#endif
-
-!define MinSupportedCPU "SSE2"
-
-#ifdef MOZ_MAINTENANCE_SERVICE
-!define MOZ_MAINTENANCE_SERVICE
+!define MinSupportedVer "Microsoft Windows 7"
 #endif
 
 # File details shared by both the installer and uninstaller
