--- a/mail/app/macbuild/Contents/Info.plist.in
+++ b/mail/app/macbuild/Contents/Info.plist.in
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>thunderbird</string>
+	<string>interlink</string>
 	<key>CFBundleGetInfoString</key>
 	<string>%MAC_APP_NAME% %APP_VERSION%</string>
 	<key>CFBundleIconFile</key>
@@ -56,7 +56,7 @@
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.productivity</string>
         <key>LSMinimumSystemVersion</key>
-        <string>10.9.0</string>
+        <string>10.7.0</string>
         <key>NSSupportsAutomaticGraphicsSwitching</key>
         <true/>
 	<key>NSDisablePersistence</key>
